Closed
Bug 619641
Opened 15 years ago
Closed 15 years ago
jsd should return "anonymous", not an empty string or NULL, for nameless functions, for Firebug compatibility.
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | betaN+ |
People
(Reporter: adrake, Assigned: igor)
References
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(2 files)
12.04 KB,
text/plain
|
Details | |
9.08 KB,
patch
|
adrake
:
review+
|
Details | Diff | Splinter Review |
Assertion failure: FUN_FLAT_CLOSURE(callee_fun), at /home/adrake/src/tm/js/src/jsfun.cpp:1178
Steps to reproduce as of tracemonkey df86d5999fef:
0. Disable methodjit and tracejit in about:config.
1. Go to https://bugzilla.mozilla.org/show_bug.cgi?id=618549
2. Enable Firebug and the script panel (tested with 1.7X.0a7)
3. Refresh the page
4. Click the login link if necessary to show the form, then click the login button
5. Observe assertion failure in output
A typical stack is attached.
With methodjit and tracejit enabled, bug 618549 is triggered.
![]() |
||
Comment 1•15 years ago
|
||
Setting blocking because it might be the underlying cause of bug 618549.
Blocks: JaegerDebug
blocking2.0: --- → betaN+
Reporter | ||
Updated•15 years ago
|
Assignee: general → adrake
Reporter | ||
Comment 2•15 years ago
|
||
Bisecting this and bug 618549 yields the revision:
changeset: 58521:e35b70ffed69
user: Igor Bukanov <igor@mir2.org>
date: Wed Nov 24 17:56:43 2010 +0100
summary: Bug 612150 - Eliminating JS_GetFunctionName. r=mrbkap
Reporter | ||
Comment 3•15 years ago
|
||
Backing this patch out fixes this and bug 618549.
![]() |
||
Updated•15 years ago
|
![]() |
Assignee | |
Comment 4•15 years ago
|
||
The patch in some cases would return an empty string when previously it would return "anonymous" for a function without the name. I guess it lead to fallouts. So a quick fix would be to make sure that the old semantics is preserved.
![]() |
Assignee | |
Updated•15 years ago
|
Assignee: adrake → igor
![]() |
Assignee | |
Comment 5•15 years ago
|
||
This is what I am going to test. The patch makes jsd implementation to return "anonymous", not null or empty string, for anonymous functions.
![]() |
Assignee | |
Comment 6•15 years ago
|
||
I cannot reproduce the crash. What exactly "script panel" means?
Comment 7•15 years ago
|
||
Script Panel:
http://getfirebug.com/wiki/index.php/Script_Panel
![]() |
Assignee | |
Comment 8•15 years ago
|
||
(In reply to comment #7)
> Script Panel:
>
> http://getfirebug.com/wiki/index.php/Script_Panel
I will check this tomorrow.
Reporter | ||
Comment 9•15 years ago
|
||
This patch fixes this bug and bug 618549 for me.
![]() |
Assignee | |
Comment 10•15 years ago
|
||
Comment on attachment 498272 [details] [diff] [review]
v1
I can also see that the patch indeed fixes the issue.
Attachment #498272 -
Flags: review?(adrake)
Reporter | ||
Comment 11•15 years ago
|
||
Comment on attachment 498272 [details] [diff] [review]
v1
Just in the interest of keeping header dependencies in check, could jsfriendapi.h include just jspubtd.h, and have the cpp pull in whatever private headers it needs?
Attachment #498272 -
Flags: review?(adrake) → review+
![]() |
Assignee | |
Comment 12•15 years ago
|
||
http://hg.mozilla.org/tracemonkey/rev/a42ff92a089e - pushed without including jsapi.h into jsfriendapi.h
Whiteboard: fixed-in-tracemonkey
![]() |
Assignee | |
Comment 13•15 years ago
|
||
Changing the title to reflect the nature of the bug.
Summary: Assertion failure FUN_FLAT_CLOSURE(callee_fun) with Firebug enabled and JIT disabled → jsd should return "anonymous", not an empty string or NULL, for nameless functions, for Firebug compatibility.
![]() |
||
Comment 14•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•