Bug 619641 - making jsd to return "anonymous" for nameless functions, not an empty string, for compatibility with Firebug. r=adrake